JS to prevent ontouchmove and deduplicate/consolidate overflow css rule

--- a/docs/assets/cover.css
+++ b/docs/assets/cover.css
@@ -28,8 +28,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 body {
